@@ -1,3 +1,9 @@
+Thu Sep 25 19:37:34 2014  Eric Wong  <e@80x24.org>
+
+	* io.c (free_io_buffer): new function for a common pattern
+	  (clear_readconv): use free_io_buffer
+	  (rb_io_fptr_finalize): ditto
+
 Thu Sep 25 07:51:07 2014  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>
 
 	* lib/matrix.rb: Fix docs. Patched by Ben Woodall. [GH-726]
